# agentforge

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
deployments/: Dockerfile
src/agentforge/: __init__.py  agent.py  dag.py  server.py
src/agentforge/tools/: __init__.py  base.py  examples.py
tests/: test_agent.py  test_dag.py  test_tools.py
